# online-visual-vocabulary

./: CMakeLists.txt
Data/: cov1.mat  cov10.mat  cov11.mat  cov12.mat  cov13.mat  cov14.mat  cov15.mat  cov16.mat  cov17.mat  cov18.mat  cov19.mat  cov2.mat  cov20.mat  cov21.mat  cov22.mat  cov23.mat  cov24.mat  cov25.mat  cov26.mat  cov27.mat  cov28.mat  cov29.mat  cov3.mat  cov30.mat  cov31.mat  cov32.mat  cov33.mat  cov34.mat  cov35.mat  cov36.mat  cov37.mat  cov38.mat  cov39.mat  cov4.mat  cov40.mat  cov41.mat  cov42.mat  cov43.mat  cov44.mat  cov45.mat  (+61 more)
include/ovv/: Cluster.h  EigenIndexVec.h  EigenIndexVecColMajor.h  IndexVec.h  SerializationUtils.h  UniqueNumber.h  VisualWord.h  Vocab.h
src/: Cluster.cpp  VisualWord.cpp  Vocab.cpp  test_basics.cpp
